# agentcore-samples

./: .gitignore  CONTRIBUTORS.md  pyproject.toml
01-features/01-harness/utils/: s3_filesystem.py
01-features/05-authenticate-and-authorize/: README.md
01-features/05-authenticate-and-authorize/03-m2m-3lo/: configure_inbound_auth.py  invoke.py  oauth2_callback_server.py  streamlit_app.py
01-features/07-centralize-and-govern-your-ai-infrastructure/02-policy/: cleanup.py  deploy.py  policy_demo.py
02-use-cases/: README.md  use-case-assessment.md
02-use-cases/01-conversational-agents/: README.md
02-use-cases/01-conversational-agents/market-trends-agent/: cleanup.py  deploy.py  market_trends_agent.py  pyproject.toml  requirements.txt
02-use-cases/01-conversational-agents/market-trends-agent/evaluators/iam/: permissions-policy.json  trust-policy.json
02-use-cases/01-conversational-agents/market-trends-agent/evaluators/pii_comprehend/: lambda_function.py
02-use-cases/01-conversational-agents/market-trends-agent/evaluators/pii_regex/: lambda_function.py
02-use-cases/01-conversational-agents/market-trends-agent/evaluators/schema_validator/: lambda_function.py
02-use-cases/01-conversational-agents/market-trends-agent/evaluators/scripts/: deploy.py  invoke.py  results.py
02-use-cases/01-conversational-agents/market-trends-agent/evaluators/stock_price_drift/: lambda_function.py
02-use-cases/01-conversational-agents/market-trends-agent/evaluators/workflow_contract_gsr/: lambda_function.py
02-use-cases/01-conversational-agents/market-trends-agent/optimization/: optimize_agent.py
02-use-cases/01-conversational-agents/market-trends-agent/tools/: __init__.py  broker_card_tools.py  browser_tool.py  memory_tools.py
02-use-cases/02-workflow-automation-agents/: README.md
02-use-cases/03-coding-assistants/: README.md
02-use-cases/lakehouse-agent/: README.md
03-integrations/bedrock-agent/: Bedrock_Agent_Integration_with_Bedrock_Agent_Core_Gateway.ipynb
05-blueprints/end-to-end-customer-service-agent/: chat_to_agentcore.ipynb  offline_evaluation.py  response_quality_evaluator.py
06-workshops/12-AgentCore-optimization/: deploy_agent.py  optimization_tutorial.ipynb
(+1105 files in other folders)
